fix: fix http response number and message
